yoavthesis/aw.coolajval/aw.cool/cool/frontend/ast/COOLParser.java
package cool.frontend.ast;

/* Generated By:JJTree&JavaCC: Do not edit this line. COOLParser.java */
public class COOLParser/*@bgen(jjtree)*/implements COOLParserTreeConstants, COOLParserConstants {/*@bgen(jjtree)*/
  protected JJTCOOLParserState jjtree = new JJTCOOLParserState();
  public static void main(String args[]) {
    COOLParser parser;
    if (args.length == 0) {
      System.out.println("COOL Parser:  Reading from standard input . . .");
      parser = new COOLParser(System.in);
    } else if (args.length == 1) {
      System.out.println("COOL Parser:  Reading from file " + args[0] + " . . .");
      try {
        parser = new COOLParser(new java.io.FileInputStream(args[0]));
      } catch (java.io.FileNotFoundException e) {
        System.out.println("COOL Parser:  File " + args[0] + " not found.");
        return;
      }
    } else {
      System.out.println("COOL Parser:  Usage is one of:");
      System.out.println("         java COOLParser < inputfile");
      System.out.println("OR");
      System.out.println("         java COOLParser inputfile");
      return;
    }
    try {
      ASTCoordinatorDecl program = parser.CoordinatorDecl();
      program.dump("");
//      MacroProcessor processor = new MacroProcessor();
//      StringBuffer out = processor.process(program);
//      System.out.println(out.toString());
      System.out.println("COOL Parser:  COOL program parsed successfully.");
    } catch (ParseException e) {
      System.out.println("COOL Parser:  Encountered errors during parse."+e);
    }
  }

  final public ASTCoordinatorDecl CoordinatorDecl() throws ParseException {
                                                        /*@bgen(jjtree) CoordinatorDecl */
  ASTCoordinatorDecl jjtn000 = new ASTCoordinatorDecl(JJTCOORDINATORDECL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PACKAGE:
        PackageDecl();
        break;
      default:
        jj_la1[0] = jj_gen;
        ;
      }
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IMPORT:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_1;
        }
        ImportDecl();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PER:
        Granularity();
        break;
      default:
        jj_la1[2] = jj_gen;
        ;
      }
      jj_consume_token(COORDINATOR);
      ClassName();
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 49:
          ;
          break;
        default:
          jj_la1[3] = jj_gen;
          break label_2;
        }
        jj_consume_token(49);
        ClassName();
      }
      jj_consume_token(50);
      CoordinationSpec();
      jj_consume_token(51);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
   {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public void Granularity() throws ParseException {
                                  /*@bgen(jjtree) Granularity */
  ASTGranularity jjtn000 = new ASTGranularity(JJTGRANULARITY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(PER);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        jj_consume_token(CLASS);
                   jjtree.closeNodeScope(jjtn000, true);
                   jjtc000 = false;
                  jjtn000.setIsClass(true);
        break;
      case OBJECT:
        jj_consume_token(OBJECT);
                                                          jjtree.closeNodeScope(jjtn000, true);
                                                          jjtc000 = false;
                                                         jjtn000.setIsClass(false);
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void CoordinationSpec() throws ParseException {
                                           /*@bgen(jjtree) CoordinationSpec */
  ASTCoordinationSpec jjtn000 = new ASTCoordinationSpec(JJTCOORDINATIONSPEC);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case MUTEX:
        case SELFEX:
        case CONDITION:
        case BOOLEAN:
        case BYTE:
        case CHAR:
        case SHORT:
        case INT:
        case FLOAT:
        case LONG:
        case DOUBLE:
        case NAME:
          ;
          break;
        default:
          jj_la1[5] = jj_gen;
          break label_3;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BOOLEAN:
        case BYTE:
        case CHAR:
        case SHORT:
        case INT:
        case FLOAT:
        case LONG:
        case DOUBLE:
          FieldDecl();
          break;
        case CONDITION:
          CondFieldDecl();
          break;
        case SELFEX:
          SelfexDecl();
          break;
        case MUTEX:
          MutexDecl();
          break;
        case NAME:
          MethodManagerDecl();
          break;
        default:
          jj_la1[6] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void FieldDecl() throws ParseException {
                             /*@bgen(jjtree) FieldDecl */
  ASTFieldDecl jjtn000 = new ASTFieldDecl(JJTFIELDDECL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      PrimType();
      VarsInit();
      jj_consume_token(52);
    } catch (Throwable jjte000) {
                                 if (jjtc000) {
                                   jjtree.clearNodeScope(jjtn000);
                                   jjtc000 = false;
                                 } else {
                                   jjtree.popNode();
                                 }
                                 if (jjte000 instanceof RuntimeException) {
                                   {if (true) throw (RuntimeException)jjte000;}
                                 }
                                 if (jjte000 instanceof ParseException) {
                                   {if (true) throw (ParseException)jjte000;}
                                 }
                                 {if (true) throw (Error)jjte000;}
    } finally {
                                 if (jjtc000) {
                                   jjtree.closeNodeScope(jjtn000, true);
                                 }
    }
  }

  final public void CondFieldDecl() throws ParseException {
                                      /*@bgen(jjtree) CondFieldDecl */
  ASTCondFieldDecl jjtn000 = new ASTCondFieldDecl(JJTCONDFIELDDECL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(CONDITION);
      VarsInit();
      jj_consume_token(52);
    } catch (Throwable jjte000) {
                                          if (jjtc000) {
                                            jjtree.clearNodeScope(jjtn000);
                                            jjtc000 = false;
                                          } else {
                                            jjtree.popNode();
                                          }
                                          if (jjte000 instanceof RuntimeException) {
                                            {if (true) throw (RuntimeException)jjte000;}
                                          }
                                          if (jjte000 instanceof ParseException) {
                                            {if (true) throw (ParseException)jjte000;}
                                          }
                                          {if (true) throw (Error)jjte000;}
    } finally {
                                          if (jjtc000) {
                                            jjtree.closeNodeScope(jjtn000, true);
                                          }
    }
  }

  final public void SelfexDecl() throws ParseException {
                               /*@bgen(jjtree) SelfexDecl */
  ASTSelfexDecl jjtn000 = new ASTSelfexDecl(JJTSELFEXDECL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(SELFEX);
      jj_consume_token(50);
      MethodSet();
      jj_consume_token(51);
      jj_consume_token(52);
    } catch (Throwable jjte000) {
                                   if (jjtc000) {
                                     jjtree.clearNodeScope(jjtn000);
                                     jjtc000 = false;
                                   } else {
                                     jjtree.popNode();
                                   }
                                   if (jjte000 instanceof RuntimeException) {
                                     {if (true) throw (RuntimeException)jjte000;}
                                   }
                                   if (jjte000 instanceof ParseException) {
                                     {if (true) throw (ParseException)jjte000;}
                                   }
                                   {if (true) throw (Error)jjte000;}
    } finally {
                                   if (jjtc000) {
                                     jjtree.closeNodeScope(jjtn000, true);
                                   }
    }
  }

  final public void MutexDecl() throws ParseException {
                              /*@bgen(jjtree) MutexDecl */
  ASTMutexDecl jjtn000 = new ASTMutexDecl(JJTMUTEXDECL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(MUTEX);
      jj_consume_token(50);
      MethodSet();
      jj_consume_token(51);
      jj_consume_token(52);
    } catch (Throwable jjte000) {
                                  if (jjtc000) {
                                    jjtree.clearNodeScope(jjtn000);
                                    jjtc000 = false;
                                  } else {
                                    jjtree.popNode();
                                  }
                                  if (jjte000 instanceof RuntimeException) {
                                    {if (true) throw (RuntimeException)jjte000;}
                                  }
                                  if (jjte000 instanceof ParseException) {
                                    {if (true) throw (ParseException)jjte000;}
                                  }
                                  {if (true) throw (Error)jjte000;}
    } finally {
                                  if (jjtc000) {
                                    jjtree.closeNodeScope(jjtn000, true);
                                  }
    }
  }

  final public void VarsInit() throws ParseException {
    VarInit();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 49:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_4;
      }
      jj_consume_token(49);
      VarInit();
    }
  }

  final public void VarInit() throws ParseException {
                         /*@bgen(jjtree) VarInit */
  ASTVarInit jjtn000 = new ASTVarInit(JJTVARINIT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_1(2147483647)) {
        Name();
        label_5:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 53:
            ;
            break;
          default:
            jj_la1[8] = jj_gen;
            break label_5;
          }
          jj_consume_token(53);
          jj_consume_token(54);
                       jjtn000.addDimension();
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 55:
          jj_consume_token(55);
          InitArr();
          break;
        default:
          jj_la1[9] = jj_gen;
          ;
        }
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NAME:
          Name();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 55:
            jj_consume_token(55);
            Expr();
            break;
          default:
            jj_la1[10] = jj_gen;
            ;
          }
          break;
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void InitArr() throws ParseException {
                          /*@bgen(jjtree) InitArr */
  ASTInitArr jjtn000 = new ASTInitArr(JJTINITARR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(50);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TRUE:
      case FALSE:
      case NEW:
      case FLOATNUM:
      case NUMBER:
      case NAME:
      case 50:
      case 56:
      case 60:
      case 65:
      case 66:
      case 80:
      case 81:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 50:
          InitArr();
          break;
        case TRUE:
        case FALSE:
        case NEW:
        case FLOATNUM:
        case NUMBER:
        case NAME:
        case 56:
        case 60:
        case 65:
        case 66:
        case 80:
        case 81:
          Expr();
          break;
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        label_6:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 49:
            ;
            break;
          default:
            jj_la1[13] = jj_gen;
            break label_6;
          }
          jj_consume_token(49);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 50:
            InitArr();
            break;
          case TRUE:
          case FALSE:
          case NEW:
          case FLOATNUM:
          case NUMBER:
          case NAME:
          case 56:
          case 60:
          case 65:
          case 66:
          case 80:
          case 81:
            Expr();
            break;
          default:
            jj_la1[14] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
      jj_consume_token(51);
    } catch (Throwable jjte000) {
                              if (jjtc000) {
                                jjtree.clearNodeScope(jjtn000);
                                jjtc000 = false;
                              } else {
                                jjtree.popNode();
                              }
                              if (jjte000 instanceof RuntimeException) {
                                {if (true) throw (RuntimeException)jjte000;}
                              }
                              if (jjte000 instanceof ParseException) {
                                {if (true) throw (ParseException)jjte000;}
                              }
                              {if (true) throw (Error)jjte000;}
    } finally {
                              if (jjtc000) {
                                jjtree.closeNodeScope(jjtn000, true);
                              }
    }
  }

  final public void MethodSet() throws ParseException {
    MethodName();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 49:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_7;
      }
      jj_consume_token(49);
      MethodName();
    }
  }

  final public void MethodName() throws ParseException {
                                /*@bgen(jjtree) MethodName */
  ASTMethodName jjtn000 = new ASTMethodName(JJTMETHODNAME);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      ClassName();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 56:
        jj_consume_token(56);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BOOLEAN:
        case BYTE:
        case CHAR:
        case SHORT:
        case INT:
        case FLOAT:
        case LONG:
        case DOUBLE:
        case NAME:
          Type();
          label_8:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case 49:
              ;
              break;
            default:
              jj_la1[17] = jj_gen;
              break label_8;
            }
            jj_consume_token(49);
            Type();
          }
          break;
        default:
          jj_la1[18] = jj_gen;
          ;
        }
        jj_consume_token(57);
        break;
      default:
        jj_la1[19] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void MethodManagerDecl() throws ParseException {
                                              /*@bgen(jjtree) MethodManagerDecl */
  ASTMethodManagerDecl jjtn000 = new ASTMethodManagerDecl(JJTMETHODMANAGERDECL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      MethodSet();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case REQUIRES:
        Requires();
        break;
      default:
        jj_la1[20] = jj_gen;
        ;
      }
      jj_consume_token(50);
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ONENTRY:
          OnEntry();
          break;
        case ONEXIT:
          OnExit();
          break;
        default:
          jj_la1[21] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ONENTRY:
        case ONEXIT:
          ;
          break;
        default:
          jj_la1[22] = jj_gen;
          break label_9;
        }
      }
      jj_consume_token(51);
    } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

  final public void Requires() throws ParseException {
                           /*@bgen(jjtree) Requires */
  ASTRequires jjtn000 = new ASTRequires(JJTREQUIRES);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(REQUIRES);
      jj_consume_token(56);
      ReqExpr();
      jj_consume_token(57);
    } catch (Throwable jjte000) {
                               if (jjtc000) {
                                 jjtree.clearNodeScope(jjtn000);
                                 jjtc000 = false;
                               } else {
                                 jjtree.popNode();
                               }
